==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.1.2 Nov 28 2014
. (kfsone) Adding support for stations with the same name in diff systems
. (kfsone) Removed import-from-maddavo.py
. (kfsone) Added support for URLs in "import" sub-command
. (kfsone) Added "--maddavo" option to "import" to import maddavo's data
e.g.
  trade.py import -i http://kfs.org/td/prices
or
  trade.py import -i --maddavo


v6.1.1 Nov 27 2014
Optimization:
. (kfsone) Removed support for old pre v5 .prices files
. (kfsone) Streamlined demand/stock columns; these now only support:
  - and 0  for "not available",
  ?        for "who cares",
  nn[?LMH] for number of units and unknown, low, medium or high
(This makes the parser several times faster)
. (kfsone) Made parsing .prices file several times faster

v6.1.0 Nov 26 2014
. (gazelle) Added "export" sub-command to generate csv files of the current database
. (kfsone) Made the update-gui significantly more user friendly.
. (kfsone) Handle cases where .prices file is missing, e.g. bootstrap

v6.0.7 Nov 26 2014
. (kfsone) Removed 'pill' options from local command
. (kfsone) Friendly message instead of crash when local finds no stars
. (kfsone) Added "--ignore-unkown" (-i) to "import"
. (kfsone) "import" without a filename will now present an open file dialog
API:
. (kfsone) You can now have optional positional arguments in command lines

v6.0.6 Nov 25 2014
. (kfsone) Issue#63 Trade calculator was not seeing some non-trade jumps
. (maddavo/kfsone) Import of ~20,000 systems
. (kfsone) GUI tweaks
. (kfsone) Station cleanup
. (kfsone) Various new stations
. (kfsone) Various minor bug fixes

v6.0.5 Nov 22 2014 (w/Gamma 1)
. (kfsone) Added "import" sub-command for loading 1+ stations from a file
. (kfsone) Added "--height" (-H) option to update GUI